[gd_scene load_steps=12 format=3 uid="uid://m5wtcsd582kx"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_4s4qw"]
[ext_resource type="Texture2D" uid="uid://egnmmyqlwumo" path="res://Resources/title.png" id="2_gh7oa"]
[ext_resource type="Texture2D" uid="uid://64pfnr0ubv65" path="res://Resources/mainmenu_border.png" id="3_ih2nu"]
[ext_resource type="FontFile" uid="uid://bvc7otdv2tjnd" path="res://Resources/JetBrainsMono-VariableFont_wght.ttf" id="4_dv2rr"]
[ext_resource type="Texture2D" uid="uid://bc6gqjkl6l6y6" path="res://Resources/start.png" id="4_m5ysm"]
[ext_resource type="Texture2D" uid="uid://bkygoq46i2nlt" path="res://Resources/credits.png" id="5_l48ff"]
[ext_resource type="Texture2D" uid="uid://bpb830uvi73ju" path="res://Resources/Icons/x-solid.svg" id="7_6brvv"]
[ext_resource type="PackedScene" uid="uid://ctb5crx6r7s0k" path="res://Scenes/Simple/audio.tscn" id="8_ll3oh"]
[ext_resource type="Script" path="res://CustomTypes/AudioPlayer.gd" id="9_77qfp"]
[ext_resource type="AudioStream" uid="uid://b8dojoa6uxn5a" path="res://Resources/Audio/mainmenu_select.wav" id="9_yd5kb"]
[ext_resource type="AudioStream" uid="uid://br2tyobr1wyek" path="res://Resources/Audio/mainmenu_start.wav" id="11_nnsq5"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4s4qw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="MainMenu" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.0
offset_top = 28.0
offset_right = 575.0
offset_bottom = 168.0
grow_horizontal = 2
texture = ExtResource("2_gh7oa")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Camera2D/CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -493.0
offset_top = -483.0
offset_right = 493.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_ih2nu")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -481.0
offset_top = 50.0
offset_right = 480.0
offset_bottom = 402.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Start" type="PanelContainer" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer"]
layout_mode = 2

[node name="Color" type="ColorRect" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Start"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Start"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture = ExtResource("4_m5ysm")
expand_mode = 1
stretch_mode = 4

[node name="Credits" type="PanelContainer" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer"]
layout_mode = 2

[node name="Color" type="ColorRect" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Credits"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Credits"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture = ExtResource("5_l48ff")
expand_mode = 1
stretch_mode = 4

[node name="Thanks" type="Label" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -72.0
offset_right = 483.0
offset_bottom = -19.0
grow_vertical = 0
rotation = -0.0378084
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 40
text = "Thanks for playing!"

[node name="Thanks2" type="Label" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2/Thanks"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.64187
offset_top = -69.9501
offset_right = 595.642
offset_bottom = -16.9501
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 15
text = "(Probably don't click 'Start' again it will most definitely break)"

[node name="Audio" parent="Camera2D/CanvasLayer/MainMenu/TextureRect2" instance=ExtResource("8_ll3oh")]
layout_mode = 1
offset_left = -347.0
offset_top = -72.0
offset_right = -113.0
offset_bottom = -52.0
rotation = -0.041481
scale = Vector2(1.36, 1.36)

[node name="Credits" type="ColorRect" parent="Camera2D/CanvasLayer/MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.423529, 0.423529, 0.623529)

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/CanvasLayer/MainMenu/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Control3" type="Control" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 50
text = "CREDITS"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 30
text = "[SIGNAL] UNBOUND"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "by MisterCricro"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label14" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 30
text = "Assets"
horizontal_alignment = 1

[node name="Label15" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "'heartbeat loud' by Soul_Serenity_Ambience on pixabay"
horizontal_alignment = 1

[node name="Control5" type="Control" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 30
text = "Tools"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "Godot Engine v4.3"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "Photopea"
horizontal_alignment = 1

[node name="Label10" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "Piskel"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "jsfxr"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "a whole lot of copium"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label9" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 30
text = "Special Thanks"
horizontal_alignment = 1

[node name="Label11" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "the voices"
horizontal_alignment = 1

[node name="Label12" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "a very specific shark"
horizontal_alignment = 1

[node name="Label13" type="Label" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dv2rr")
theme_override_font_sizes/font_size = 20
text = "and you ofc"
horizontal_alignment = 1

[node name="Control4" type="Control" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseCredits" type="TextureRect" parent="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 15.0
offset_right = -23.0
offset_bottom = 55.0
grow_horizontal = 0
texture = ExtResource("7_6brvv")
expand_mode = 1
stretch_mode = 5

[node name="AudioSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_yd5kb")
script = ExtResource("9_77qfp")

[node name="AudioStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_nnsq5")
script = ExtResource("9_77qfp")

[connection signal="gui_input" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Start" to="." method="_on_start_gui_input"]
[connection signal="mouse_entered" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="gui_input" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Credits" to="." method="_on_credits_gui_input"]
[connection signal="mouse_entered" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="_drag_ended" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/Audio" to="." method="_on_audio__drag_ended"]
[connection signal="_value_changed" from="Camera2D/CanvasLayer/MainMenu/TextureRect2/Audio" to="." method="_on_audio__value_changed"]
[connection signal="gui_input" from="Camera2D/CanvasLayer/MainMenu/Credits/CenterContainer/ColorRect/CloseCredits" to="." method="_on_close_credits_gui_input"]
